crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__method__missing_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/missing_arguments.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: arity error: `<bound method method of <Foo instance at [POINTER]>>` expects 2 args but 1 args were passed
   ╭─[craftinginterpreters/test/method/missing_arguments.lox:5:1]
   │
 5 │ Foo().method(1); // expect runtime error: Expected 2 arguments but got 1.
   │ ──────┬─────  
   │       ╰─────── expects 2 arguments
───╯
